# BFSP-DIWO

./: .gitignore  AIGC-NEH.cpp  ALG1.cpp  Alg1-NEH.cpp  Alg1.cpp  Alg2.hpp  CMakeLists.txt  LICENSE  NOTICE  README-zh.md  README.md  RSB-PF_NEH.cpp  Utils.cpp  Utils.h  main.cpp  部分结果序列.xlsx
data/: BestSeq_ARPD.csv
data/NEH/src/: utils.py
data/result/: README.md
data/result/final/: S_max=5,sigma_min=4.csv  S_max=5,sigma_min=5.csv  S_max=7,sigma_min=4.csv  S_max=7,sigma_min=5.csv  S_max=7,sigma_min=6.csv  S_max=9,sigma_min=5.csv  ans.txt  find.py  sigma_max=10, pls=0.15.csv  sigma_max=10, pls=0.25.csv  sigma_max=10, pls=0.35.csv  sigma_max=8, pls=0.15.csv  sigma_max=8, pls=0.25.csv  sigma_max=8, pls=0.35.csv  sigma_max=9, pls=0.15.csv  sigma_max=9, pls=0.25.csv  sigma_max=9, pls=0.35.csv
data/result/final/P_max-10/: BestSeq_ARPD.csv
data/result/final/P_max-20/: BestSeq_ARPD.csv
data/result/final/S_min-1/: BestSeq_ARPD.csv
data/result/original/: BestSeq_ARPD.csv  process.py  sigma_max=10, pls=0.15.csv  sigma_max=10, pls=0.25.csv  sigma_max=10, pls=0.35.csv  sigma_max=8, pls=0.25.csv  sigma_max=8, pls=0.35.csv  sigma_max=9, pls=0.15.csv  sigma_max=9, pls=0.25.csv  sigma_max=9, pls=0.35.csv  split.py
project/: Alg1.cpp  Alg1.h  Alg2.cpp  Alg2.h  Alg2.hpp  Alg3.cpp  Alg3.h  Alg4.cpp  Alg4.h  CMakeLists.txt  GlobalData.cpp  GlobalData.h  IO.cpp  IO.h  Utils.cpp  Utils.h  main.cpp
src/: Alg1.cpp  Alg1.h  Alg2.cpp  Alg2.h  Alg3.cpp  Alg3.h  Alg4.cpp  Alg4.h  CMakeLists.txt  GlobalData.cpp  GlobalData.h  IO.cpp  IO.h  Test.cpp  Test.h  Utils.cpp  Utils.h  main.cpp
(+1 files in other folders)
